@@ -22,12 +22,15 @@ import org.springframework.web.cors.CorsConfigurationSource;
 
 import javax.servlet.http.HttpServletResponse;
 import java.util.Collections;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig extends WebSecurityConfigurerAdapter {
-    @Value("${books.origin}")
-    private String origin;
+    @Value("${books.origin.user}")
+    private String userOrigin;
+    @Value("${books.origin.admin}")
+    private String adminOrigin;
     private UserDetailsService userDetailsService;
     private TokenFilter tokenFilter;
 
@@ -87,7 +90,7 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
     CorsConfigurationSource corsConfigurationSource() {
         var corsConfiguration = new CorsConfiguration();
         corsConfiguration.setAllowedHeaders(Collections.singletonList(CorsConfiguration.ALL));
-        corsConfiguration.setAllowedOrigins(Collections.singletonList(origin));
+        corsConfiguration.setAllowedOrigins(List.of(userOrigin, adminOrigin));
         corsConfiguration.setAllowedMethods(Collections.singletonList(CorsConfiguration.ALL));
         return request -> corsConfiguration;
     }
